--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     env: node
     region: oregon
     plan: free
-    buildCommand: cd server && npm install
+    buildCommand: cd server && npm install && npx puppeteer browsers install chrome
     startCommand: cd server && node server.js
     healthCheckPath: /health
     envVars:
@@ -13,6 +13,10 @@ services:
         value: production
       - key: PORT
         value: 3001
+      - key: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
+        value: false
+      - key: PUPPETEER_EXECUTABLE_PATH
+        value: /opt/render/.cache/puppeteer/chrome/linux-144.0.7559.96/chrome-linux64/chrome
     disk:
       name: whatsapp-data
       mountPath: /opt/render/project/src/server
