fix: simplifica build do Render para usar Chromium do sistema

--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     env: node
     region: oregon
     plan: free
-    buildCommand: cd server && npm install && npx puppeteer browsers install chrome
+    buildCommand: cd server && npm install
     startCommand: cd server && node server.js
     healthCheckPath: /health
     envVars:
@@ -14,9 +14,9 @@ services:
       - key: PORT
         value: 3001
       - key: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
-        value: false
+        value: true
       - key: PUPPETEER_EXECUTABLE_PATH
-        value: /opt/render/.cache/puppeteer/chrome/linux-144.0.7559.96/chrome-linux64/chrome
+        value: /usr/bin/chromium-browser
     disk:
       name: whatsapp-data
       mountPath: /opt/render/project/src/server
