--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "node server.js",
     "start": "node server.js",
-    "build": "npx puppeteer browsers install chrome"
+    "build": "echo 'Build completed'"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -14,7 +14,6 @@
     "qrcode": "^1.5.3",
     "socket.io": "^4.6.1",
     "sql.js": "^1.10.3",
-    "node-cron": "^3.0.3",
-    "puppeteer": "^21.0.0"
+    "node-cron": "^3.0.3"
   }
 }
