fix: corrige caminho do publish directory no Render

--- a/render.yaml
+++ b/render.yaml
@@ -28,8 +28,8 @@ services:
     env: static
     region: oregon
     plan: free
-    buildCommand: cd client && npm install && npm run build
-    staticPublishPath: ./client/dist
+    buildCommand: npm install && npm run build && cp _redirects dist/_redirects
+    staticPublishPath: ./dist
     routes:
       - type: rewrite
         source: /*
