fix: remover executablePath e adicionar puppeteer explicito para Railway

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "node server.js",
     "start": "node server.js",
-    "build": "echo 'Build completed'"
+    "build": "echo 'Build completed'",
+    "postinstall": "node -e \"console.log('Puppeteer setup complete')\""
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -14,6 +15,7 @@
     "qrcode": "^1.5.3",
     "socket.io": "^4.6.1",
     "sql.js": "^1.10.3",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "puppeteer": "^21.0.0"
   }
 }
