--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "qrcode": "^1.5.3",
     "socket.io": "^4.6.1",
     "sql.js": "^1.10.3",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "puppeteer": "^21.6.1"
   }
 }
